[TestPlainAddress - 1]
parser.Program{
    Statements: {
        &parser.SendStatement{
            Range: parser.Range{
                Start: parser.Position{},
                End:   parser.Position{Character:1, Line:3},
            },
            Monetary: &parser.MonetaryLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:5, Line:0},
                    End:   parser.Position{Character:16, Line:0},
                },
                Asset:  "EUR/2",
                Amount: 100,
            },
            Source: &parser.AccountLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:11, Line:1},
                    End:   parser.Position{Character:15, Line:1},
                },
                Name: "src",
            },
            Destination: &parser.AccountLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:16, Line:2},
                    End:   parser.Position{Character:21, Line:2},
                },
                Name: "dest",
            },
        },
    },
}
---

[TestVariable - 1]
parser.Program{
    Statements: {
        &parser.SendStatement{
            Range: parser.Range{
                Start: parser.Position{},
                End:   parser.Position{Character:1, Line:3},
            },
            Monetary: &parser.MonetaryLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:5, Line:0},
                    End:   parser.Position{Character:16, Line:0},
                },
                Asset:  "EUR/2",
                Amount: 100,
            },
            Source: &parser.VariableLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:11, Line:1},
                    End:   parser.Position{Character:27, Line:1},
                },
                Name: "example_var_src",
            },
            Destination: &parser.VariableLiteral{
                Range: parser.Range{
                    Start: parser.Position{Character:16, Line:2},
                    End:   parser.Position{Character:33, Line:2},
                },
                Name: "example_var_dest",
            },
        },
    },
}
---
